<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dp" >

        <TextView
            android:id="@+id/cart_delete_popup_text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="0dp"
            android:text="@string/cart_label_dialog_text"
            android:textColor="#666666"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/cart_delete_popup_text_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/cart_delete_popup_text2"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="20dp"
            android:text="@string/cart_label_dialog_no"
            android:textColor="#ed4747"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/cart_delete_popup_text_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/cart_delete_popup_text2"
            android:layout_marginRight="35dp"
            android:layout_marginTop="20dp"
            android:text="@string/cart_label_dialog_yes"
            android:textColor="#ed4747"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_below="@+id/cart_delete_popup_text_ok"
            android:layout_marginTop="8dp"
            android:visibility="invisible" />
    </RelativeLayout>

</RelativeLayout>