<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dp" >

        <com.example.chanhy.shopsy.Utils.CustomTextView
            android:id="@+id/advance_settings_info_popup_text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dp"
            android:text="@string/advance_settings_label_bandwidth_select"
            android:textColor="#575757"
            android:textSize="18sp" />

        <com.example.chanhy.shopsy.Utils.CustomTextView
            android:id="@+id/advance_settings_info_popup_text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/advance_settings_info_popup_text1"
            android:layout_below="@+id/advance_settings_info_popup_text1"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/advance_settings_label_bandwidth_info"
            android:textColor="#666666"
            android:textSize="16sp" />

        <com.example.chanhy.shopsy.Utils.CustomTextView
            android:id="@+id/advance_settings_info_popup_text_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/advance_settings_info_popup_text2"
            android:layout_marginRight="35dp"
            android:layout_marginTop="20dp"
            android:text="@string/advance_settings_label_bandwidth_okay"
            android:textColor="#ed4747"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_below="@+id/advance_settings_info_popup_text_ok"
            android:layout_marginTop="8dp"
            android:visibility="invisible" />
    </RelativeLayout>

</RelativeLayout>