<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_image"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1_add_item_3"
        android:layout_width="match_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:id="@+id/linear_layout_add_item_move3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="80dp"
                android:text="@string/aboutitem"
                android:textColor="#ffffff"
                android:textSize="16sp"
                android:textStyle="bold"
                android:typeface="serif" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/whendid"
                android:textColor="#ffffff"
                android:textSize="24sp"
                android:typeface="serif" />

            <LinearLayout
                android:id="@+id/linear_layout_shoppolicies_add_item_3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="70dp"
                android:layout_marginBottom="10dp"
                android:background="#cdcdcd"
                android:orientation="vertical" >

                <RelativeLayout
                    android:id="@+id/layout_madetoOrder"
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:background="#ffffff"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/textView_add_item_3_idid"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="15dp"
                        android:text="@string/madetoordr"
                        android:textSize="13sp"
                        android:typeface="serif" />

                    <ImageView
                        android:id="@+id/imageView_idid_add_item3_tick"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="15dp"
                        android:contentDescription="@string/description"
                        android:src="@drawable/green_tick" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>