<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/feed_swipe_refresh_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#00000000"
        android:fillViewport="true"
        android:scrollbars="none" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#00000000" >

            <RelativeLayout
                android:id="@+id/feed_nointernet_layout"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:visibility="gone" >

                <com.example.chanhy.shopsy.Utils.CustomTextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:text="@string/nointernet_data"
                    android:textSize="18sp"
                    android:typeface="sans" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/feed_loading_layout"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:visibility="gone" >

                <ImageView
                    android:id="@+id/feed_loading_gif"
                    android:layout_width="53dp"
                    android:layout_height="53dp"
                    android:contentDescription="@null"
                    android:layout_centerInParent="true" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/feed_loading_gif"
                    android:layout_centerHorizontal="true" >

                    <com.example.chanhy.shopsy.Utils.CustomTextView
                        android:id="@+id/feed_preparing_dummytext"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="@string/loading_preparing_data1"
                        android:textColor="#4f4f4f" />

                    <com.example.chanhy.shopsy.Utils.CustomTextView
                        android:id="@+id/feed_preparing_dummytext2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/feed_preparing_dummytext"
                        android:layout_centerHorizontal="true"
                        android:textColor="#4f4f4f"
                        android:text="@string/loading_preparing_data2" />
                </RelativeLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/feed_signin_layout"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:visibility="gone" >

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true" >

                    <com.example.chanhy.shopsy.Utils.CustomTextView
                        android:id="@+id/feedsignin_data1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="@string/signinfeeddata1"
                        android:textColor="#000000"
                        android:textSize="16sp"
                        android:typeface="sans" />

                    <com.example.chanhy.shopsy.Utils.CustomTextView
                        android:id="@+id/feedsignin_data2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/feedsignin_data1"
                        android:layout_centerHorizontal="true"
                        android:text="@string/signinfeeddata2"
                        android:textColor="#000000"
                        android:textSize="16sp"
                        android:typeface="sans" />

                    <com.example.chanhy.shopsy.Utils.CustomTextView
                        android:id="@+id/feedsignin_data3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/feedsignin_data2"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="8dp"
                        android:text="@string/takeminutefeeddata"
                        android:textColor="#000000"
                        android:textSize="13sp"
                        android:typeface="sans" />

                    <RelativeLayout
                        android:id="@+id/feed_signin_submitlayout"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/feedsignin_data3"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="5dp"
                        android:background="#0D80D0" >

                        <com.example.chanhy.shopsy.Utils.CustomTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:paddingBottom="10dp"
                            android:paddingLeft="5dp"
                            android:paddingRight="5dp"
                            android:paddingTop="10dp"
                            android:text="@string/favpopup_signintext"
                            android:textColor="#ffffff"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:typeface="sans" />
                    </RelativeLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/feed_signin_submitlayout"
                        android:layout_centerHorizontal="true"
                        android:visibility="invisible" />
                </RelativeLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/feed_seetrending_layout"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_alignParentTop="true"
                android:visibility="gone" >

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true" >

                    <com.example.chanhy.shopsy.Utils.CustomTextView
                        android:id="@+id/nofeed_data1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="@string/nofeeddata"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        android:typeface="sans" />

                    <com.example.chanhy.shopsy.Utils.CustomTextView
                        android:id="@+id/nofeed_data2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/nofeed_data1"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="15dp"
                        android:text="@string/ideadata"
                        android:textColor="#000000"
                        android:textSize="14sp"
                        android:typeface="sans" />

                    <RelativeLayout
                        android:id="@+id/feed_seetrendinglayout_submit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/nofeed_data2"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="5dp"
                        android:background="#0D80D0" >

                        <com.example.chanhy.shopsy.Utils.CustomTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:paddingBottom="10dp"
                            android:paddingLeft="5dp"
                            android:paddingRight="5dp"
                            android:paddingTop="10dp"
                            android:text="@string/seetrendingdata"
                            android:textColor="#ffffff"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:typeface="sans" />
                    </RelativeLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/feed_seetrendinglayout_submit"
                        android:layout_centerHorizontal="true"
                        android:visibility="invisible" />
                </RelativeLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/feed_main_layout"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:visibility="gone" >

                <com.example.chanhy.shopsy.Utils.GridViewWithHeaderAndFooter
                    android:id="@+id/feed_GridView"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:background="#F7F6F2"
                    android:gravity="center"
                    android:numColumns="1"
                    android:scrollbars="none" >
                </com.example.chanhy.shopsy.Utils.GridViewWithHeaderAndFooter>
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>

</android.support.v4.widget.SwipeRefreshLayout>
